--- a/package.json
+++ b/package.json
@@ -3,15 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "PORT=3003 next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest ."
   },
   "dependencies": {
+    "autoprefixer": "^10.3.7",
+    "clsx": "^1.1.1",
+    "daisyui": "^1.14.2",
+    "date-fns": "^2.25.0",
     "next": "11.1.2",
+    "postcss": "^8.3.9",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "tailwindcss": "^2.2.16"
   },
   "devDependencies": {
     "@types/react": "17.0.27",
