Add Kontist as dependency

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "clsx": "^1.1.1",
     "daisyui": "^1.14.2",
     "date-fns": "^2.25.0",
+    "kontist": "^0.36.11",
     "next": "11.1.2",
     "postcss": "^8.3.9",
     "react": "17.0.2",
